<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

<group android:checkableBehavior="single">

    <item
        android:id="@+id/nac_call"
        android:icon="@drawable/call_phone_icon"
        android:title="@string/call"/>
    <item
        android:id="@+id/nac_friends"
        android:icon="@drawable/users_people_icon"
        android:title="@string/friends"/>
    <item
        android:id="@+id/nac_location"
        android:icon="@drawable/location"
        android:title="@string/location"/>
    <item
        android:id="@+id/nac_mail"
        android:icon="@drawable/mail"
        android:title="@string/mail"/>
    <item
        android:id="@+id/nac_task"
        android:icon="@drawable/task"
        android:title="@string/task"/>
</group>
</menu>